[bumpversion]
current_version = 21.2.7
commit = False
tag = False

[bumpversion:file:VERSION]

[bumpversion:file:Makefile]

[bumpversion:file:lim/__init__.py]

[bdist_wheel]
universal = 1

[metadata]
name = lim-cli
description = LiminalInfo command line app.
description-file = README.rst
author = Dave Dittrich
author_email = dave.dittrich@gmail.com
download_url = https://github.com/davedittrich/lim-cli/tarball/master
url = https://github.com/davedittrich/lim-cli
python_requires = >=3.6.0
license = Apache 2.0 Software License
keywords =
    lim
    cliff
    cli
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: Other Audience
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Security
    Topic :: Utilities

[options.entry_points]
    console_scripts =
        lim = lim.__main__:main
    lim =
        about = lim.about:About
        ctu get = lim.ctu.get:CTUGet
        ctu list = lim.ctu.list:CTUList
        ctu show = lim.ctu.show:CTUShow
        ctu stats = lim.ctu.stats:CTUStats
        ctu overview = lim.ctu.overview:CTUOverview
        cafe about = lim.packet_cafe.about:About
        cafe admin delete = lim.packet_cafe.admin.delete:AdminDelete
        cafe admin endpoints = lim.packet_cafe.admin.endpoints:Endpoints
        cafe admin files = lim.packet_cafe.admin.files:Files
        cafe admin results = lim.packet_cafe.admin.results:Results
        cafe admin sessions = lim.packet_cafe.admin.sessions:Sessions
        cafe admin info = lim.packet_cafe.admin.info:AdminInfo
        cafe docker build = lim.packet_cafe.extensions.docker_cmds:ImagesBuild
        cafe docker down = lim.packet_cafe.extensions.docker_cmds:ContainersDown
        cafe docker images = lim.packet_cafe.extensions.docker_cmds:ImagesList
        cafe docker pull = lim.packet_cafe.extensions.docker_cmds:ImagesPull
        cafe docker ps = lim.packet_cafe.extensions.docker_cmds:ContainersList
        cafe docker up = lim.packet_cafe.extensions.docker_cmds:ContainersUp
        cafe endpoints = lim.packet_cafe.api.endpoints:Endpoints
        cafe raw = lim.packet_cafe.api.raw:Raw
        cafe requests = lim.packet_cafe.api.requests:Requests
        cafe results = lim.packet_cafe.api.results:Results
        cafe report = lim.packet_cafe.extensions.report:Report
        cafe info = lim.packet_cafe.api.info:ApiInfo
        cafe status = lim.packet_cafe.api.status:Status
        cafe stop = lim.packet_cafe.api.stop:Stop
        cafe tools = lim.packet_cafe.api.tools:Tools
        cafe upload = lim.packet_cafe.api.upload:Upload
        cafe ui = lim.packet_cafe.ui:UI
        pcap extract ips = lim.pcap.extract:PCAPExtract
        pcap shift network = lim.pcap.shift:PCAPShift
        pcap shift time = lim.pcap.shift:PCAPShift
        version = lim.about:About

